--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 html {
     font-size: 10px;
 }
@@ -15,8 +21,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 600px;
-    height: 600px;
+    width: 100vw;
+    height: 100vh;
     background-color: white;
 }
 
@@ -25,25 +31,27 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;        
-        width: 95%;
-        height: 95%;
+        width: 100%;
+        height: 100%;
     }
 
         .title {
             font-size: 4rem;
+            margin-bottom: 3rem;
         }
 
         .subtitle {
             font-size: 2.5rem;
+            margin-bottom: 3rem;
         }
 
         .difficult-button {
             font-size: 4rem;
-            margin: 1%;
-            padding: 5%;
-            width: 50%;
-            height: 20%;
-            border-radius: 10%;
+            margin: 2%;
+            padding: 4%;
+            width: 75%;
+            height: 15%;
+            border-radius: 2rem;
             box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6);
         }
 
@@ -73,8 +81,8 @@ body {
     .game-screen {        
         display: flex;
         flex-direction: column;
-        width: 95%;
-        height: 95%;
+        width: 100%;
+        height: 100%;
         border: solid 1px;
     }
 
@@ -289,8 +297,8 @@ body {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 95%;
-        height: 95%;
+        width: 100%;
+        height: 100%;
     }
 
         .message, .final-score {
@@ -303,47 +311,25 @@ body {
             margin: 5%;
             padding: 8%;
             width: 50%;
-            border-radius: 10%;
+            border-radius: 2rem;
             box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.6);
             background-color: darkslategrey;
             color: white;
         }
 
 @media (max-width: 1024px) {
-    .iframe-container {
-        width: 560px;
-        height: 560px;
-    }
-
     html {
         font-size: 7px;
     }
 }
-    
-@media (max-width: 768px) {
-    .iframe-container {
-        width: 420px;
-        height: 420px;
-    }
-}
 
 @media (max-width: 576px) {
-    .iframe-container {
-        width: 350px;
-        height: 350px;
-    }
-
     html {
         font-size: 6px;
     }
 }
 
 @media (max-width: 425px) {
-    .iframe-container {
-        width: 240px;
-        height: 240px;
-    }
-
     html {
         font-size: 4px;
     }
